tests/ui/typeck/coercion-check-for-addition-issue-40610.rs
fn f(_: &[f32]) {}

fn main() {
    () + f(&[1.0]);
    //~^ ERROR cannot add `()` to `()`
}
